fix: use 100svh to exclude both top and bottom Safari toolbars on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ html {
   overflow: hidden;
   position: fixed;
   width: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
@@ -56,6 +57,7 @@ body {
   position: fixed;
   width: 100%;
   touch-action: manipulation;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* 标题样式 */
